# ffmepg

./: .gitignore  AnimeTranscoder.csproj  AnimeTranscoder.slnx  App.xaml  App.xaml.cs  README.md  build_release_bundle.ps1  whisper-config.json
AnimeTranscoder.Cli/: AnimeTranscoder.Cli.csproj  CliExitCodes.cs  Program.cs
AnimeTranscoder.Core/: AnimeTranscoder.Core.csproj
AnimeTranscoder.Tests/: AnimeEpisodeParserServiceTests.cs  AnimeTranscoder.Tests.csproj  CliProgramTests.cs  ClipCommandBuilderTests.cs  DanmakuAssGeneratorServiceTests.cs  DanmakuExclusionRuleServiceTests.cs  FfmpegCommandBuilderTests.cs  FileProtocolRoundTripTests.cs  ProjectAudioWorkflowTests.cs  ProjectFileServiceTests.cs  SelectionDocumentServiceTests.cs  TestWorkspace.cs  TranscodeQueueWorkflowTests.cs  WhisperCliAdapterTests.cs
Composition/: AppCompositionRoot.cs
GameSubtitleOCR/: .gitignore  README.md  install_windows.ps1  pyproject.toml
GameSubtitleOCR/src/game_subtitle_ocr/: __init__.py  cli.py  config.py  ffmpeg_ops.py  models.py  ocr.py  pipeline.py  postprocess.py  preprocess.py  region_detection.py  subtitle_tools.py  tuning.py  utils.py
GameSubtitleOCR/tests/: test_postprocess.py  test_subtitle_tools.py
Infrastructure/: AppFileLogger.cs  AsyncRelayCommand.cs  RelayCommand.cs  ToolPathResolver.cs
Models/: ClipMode.cs  (+54 more)
native/AnimeMediaCore/: CMakeLists.txt  CMakePresets.json  README.md  build_native_debug.cmd  build_native_release.cmd
native/AnimeMediaCore/include/: AnimeMediaCore.h
native/AnimeMediaCore/src/: AnimeMediaCore.cpp
native/AnimeMediaCore/tests/: README.md
(+168 files in other folders)
